Add ConfigurationProvider and ConfigurationSource for TextFile + add some tests

--- a/TextFile.Extensions.Configuration.Tests/TextFile.Extensions.Configuration.Tests.csproj
+++ b/TextFile.Extensions.Configuration.Tests/TextFile.Extensions.Configuration.Tests.csproj
@@ -7,14 +7,20 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
-    <PackageReference Include="xunit" Version="2.4.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
-    <PackageReference Include="coverlet.collector" Version="1.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftTestsPackageVersion)" />
+    <PackageReference Include="xunit" Version="$(XunitPackageVersion)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitPackageVersion)" />
+    <PackageReference Include="NFluent" Version="$(NFluentPackageVersion)" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TextFile.Extensions.Configuration\TextFile.Extensions.Configuration.csproj" />
+  </ItemGroup>
+
+    <ItemGroup>
+    <None Update="testFile.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
