--- a/TextFile.Extensions.Configuration/TextFile.Extensions.Configuration.csproj
+++ b/TextFile.Extensions.Configuration/TextFile.Extensions.Configuration.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="$(MicrosoftAspNetCorePackageVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="$(MicrosoftAspNetCorePackageVersion)" />
+  </ItemGroup>
+
 </Project>
